z-index fix

--- a/css/skills.css
+++ b/css/skills.css
@@ -81,6 +81,8 @@
     left: 50%;
     transform: translate(-50%, -100%);
 
+    z-index: 20;
+
     transition: opacity 0.2s;
 }
 
